<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nikhilmeena10.iitbhumobile.MainActivity">

    <ImageView
        android:id="@+id/logobutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp"
        android:adjustViewBounds="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scaleType="fitXY"
        android:src="@drawable/iitbhu"/>

    <ImageView
        android:id="@+id/hor_bar"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_below="@id/logobutton"
        android:src="@drawable/bar"/>

    <GridLayout
        android:id="@+id/buttons_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hor_bar"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:columnCount="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/people_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/people_button_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/team"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/people_button_name"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/map_button_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/globe"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/map_button_name"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/admissions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/admissions_button_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/college_building"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/admissions_button_name"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/calendar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/calendar_button_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/calendar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/calendar_button_name"
                    android:textSize="10sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/tpo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tpo_button_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/luggage"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tpo_button_name"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/academics_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/academics_button_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/books"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/academics_button_name"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mail_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mail_button_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/email"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mail_button_name"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fees_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fees_button_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/credit_card"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/fees_button_name"
                    android:textSize="10sp"/>

            </LinearLayout>



        </LinearLayout>


    </GridLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/iit_bhu_background"
        />

</RelativeLayout>
